--- a/Ch3/app/src/main/res/layout/activity_main.xml
+++ b/Ch3/app/src/main/res/layout/activity_main.xml
@@ -18,4 +18,11 @@
         android:layout_height="wrap_content"
         android:text="Button"
         android:textAllCaps="false"></Button>
+
+    <EditText
+        android:id="@+id/edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:maxLines="2"
+        android:hint="Type something here"></EditText>
 </LinearLayout>
