<new> Learn ImageView.

--- a/Ch3/app/src/main/res/layout/activity_main.xml
+++ b/Ch3/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,10 @@
         android:layout_height="wrap_content"
         android:maxLines="2"
         android:hint="Type something here"></EditText>
+
+    <ImageView
+        android:id="@+id/image_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/img_1"></ImageView>
 </LinearLayout>
