--- a/Ch3/app/src/main/res/layout/activity_main.xml
+++ b/Ch3/app/src/main/res/layout/activity_main.xml
@@ -31,4 +31,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/img_1"></ImageView>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></ProgressBar>
 </LinearLayout>
