--- a/Ch3/app/src/main/res/layout/activity_main.xml
+++ b/Ch3/app/src/main/res/layout/activity_main.xml
@@ -35,5 +35,8 @@
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ProgressBar>
+        android:layout_height="wrap_content"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:minHeight="40dp"
+        android:max="100" />
 </LinearLayout>
