--- a/Ch3-3/app/src/main/res/layout/activity_main.xml
+++ b/Ch3-3/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="top"
         android:id="@+id/button1"
         android:text="Buton 1" ></Button>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:id="@+id/button2"
         android:text="Button 2"></Button>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:id="@+id/button3"
         android:text="Button 3"></Button>
 </LinearLayout>
