--- a/Ch3-3/app/src/main/res/layout/activity_main.xml
+++ b/Ch3-3/app/src/main/res/layout/activity_main.xml
@@ -2,5 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/title"></include>
+    <com.robincn.uilayouttest.TitleLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></com.robincn.uilayouttest.TitleLayout>
 </LinearLayout>
