<fix> After 6.3.2, using SharedPreferences to read and store data.

--- a/Ch6/SharedPreferences/app/src/main/res/layout/activity_main.xml
+++ b/Ch6/SharedPreferences/app/src/main/res/layout/activity_main.xml
@@ -9,4 +9,11 @@
         android:id="@+id/save_data"
         android:text="Save data">
     </Button>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/restore_data"
+        android:text="Restore data">
+    </Button>
 </LinearLayout>
