--- a/Ch5/BroadcastBestPractice/app/src/main/res/layout/activity_login.xml
+++ b/Ch5/BroadcastBestPractice/app/src/main/res/layout/activity_login.xml
@@ -42,6 +42,22 @@
             android:inputType="textPassword"></EditText>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/remember_pass"></CheckBox>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:text="Remember password"></TextView>
+    </LinearLayout>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="60dp"
