--- a/Ch6/DatabaseTest/app/src/main/res/layout/activity_main.xml
+++ b/Ch6/DatabaseTest/app/src/main/res/layout/activity_main.xml
@@ -9,5 +9,22 @@
         android:layout_height="wrap_content"
         android:text="Create database"></Button>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/add_data"
+        android:text="Add data"></Button>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/update_data"
+        android:text="Update data"></Button>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/delete_data"
+        android:text="Delete data"></Button>
 
 </LinearLayout>
