--- a/Ch6/DatabaseTest/app/src/main/res/layout/activity_main.xml
+++ b/Ch6/DatabaseTest/app/src/main/res/layout/activity_main.xml
@@ -27,4 +27,10 @@
         android:id="@+id/delete_data"
         android:text="Delete data"></Button>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/query_data"
+        android:text="Query data"></Button>
+
 </LinearLayout>
